Исправить замечания + рефакторинг